deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deployment-example
  name: deployment-example
  generation: 6
spec:
  progressDeadlineSeconds: 600
  replicas: 3 
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: deployment-example
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: deployment-example
    spec:
      containers:
      - image: quay.io/mwasher/httpbin
        imagePullPolicy: Always
        command: ["gunicorn", "-b", "0.0.0.0:8080", "httpbin:app", "-k", "gevent"]
        name: httpbin
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","sleep 60"] 
        resources:
          requests:
            cpu: 500m
            memory: 1G
            ephemeral-storage: 100M
          limits:
            cpu: 500m
            memory: 1G
            ephemeral-storage: 100M
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: ephemeral
          mountPath: /tmppath
        readinessProbe:
          httpGet:
            port: 8080
            path: /get
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 15
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 60
      volumes:
      - name: ephemeral
        emptyDir: {}
