deployment/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deployment-example
  name: deployment-example
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: deployment-example
  type: ClusterIP
