deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: deployment-example
  name: deployment-example
  namespace: httpbin
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: deployment-example
    weight: 100
  wildcardPolicy: None
